--- a/src/app/shell/header/header.component.html
+++ b/src/app/shell/header/header.component.html
@@ -1,3 +1,3 @@
-<nav class="navbar navbar-dark bg-primary">
+<nav class="navbar navbar-dark bg-primary header">
   <a class="navbar-brand" href="#">Imventory Management</a>
 </nav>
