--- a/src/app/content/add/add.component.html
+++ b/src/app/content/add/add.component.html
@@ -1,5 +1,5 @@
 
-<form class="form" [formGroup]="form">
+<form class="form" [formGroup]="form" (ngSubmit)="onSubmit()">
   <h2 class="title">დაამატეთ ნივთი</h2>
   <div class="col-auto">
     <label for="status" class="col-sm-2 col-form-label">ადგილმდებარეობა:</label>
@@ -19,5 +19,5 @@
   <div>
       <input type="number" formControlName="number" id="number"[formGroup]="form" novalidate  >
 </div>
-<button type="button" class="btn btn-primary button1">დამატება</button>
+<button type="submit" class="btn btn-primary button1">დამატება</button>
 </form>
