--- a/src/app/content/list/list.component.html
+++ b/src/app/content/list/list.component.html
@@ -1,8 +1,23 @@
-<button type="button" class="btn btn-primary" [routerLink]="['/add']">add</button>
-<nav class="nav nav-pills nav-justified list1">
-  <a class="nav-item nav-link active" >ნივთის სახელი</a>
-  <a class="nav-item nav-link active" >ნივთის ადგილმდებარეობა</a>
-  <a class="nav-item nav-link active" >ფასი (ლარებში)</a>
-  <a class="nav-item nav-link active" >ოპერაციები</a>
-</nav>
-<button type="button" class="btn btn-primary" [routerLink]="['/add']">add</button>
+<button type="button" class="btn btn-primary" [routerLink]="['/add']">დამატება</button>
+<table class="table">
+  <thead class="thead-light">
+    <tr>
+      <th scope="col">ნივთის სახელი</th>
+      <th scope="col">ნივთის ადგილმდებარეობა</th>
+      <th scope="col">ფასი (ლარებში)</th>
+      <th scope="col">ოპერაციები</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row"></th>
+      <td></td>
+      <td></td>
+      <td></td>
+    </tr>
+  </tbody>
+</table>
+<button type="button" class="btn btn-primary button2" [routerLink]="['/add']">დამატება</button>
+
+
+
