small changes in style

--- a/src/app/content/add/add.component.css
+++ b/src/app/content/add/add.component.css
@@ -1,11 +1,25 @@
-.dropdown-toggle {
-  background-color: #cc3399 !important;
-  border-color: #cc3399 !important;
-}
 .form {
   max-width: 350px;
   margin: 0 auto;
 }
 .button1 {
   margin-top: 10px;
+}
+.body {
+  background-image: linear-gradient(
+    to right top,
+    #051937,
+    #004d7a,
+    #008793,
+    #00bf72,
+    #a8eb12
+  );
+  height: 100vh;
+}
+.title {
+  padding-top: 100px;
+  color: white;
+}
+.label {
+  color: white !important;
 }
