--- a/src/app/shell/header/header.component.html
+++ b/src/app/shell/header/header.component.html
@@ -1,3 +1,9 @@
-<nav class="navbar navbar-dark bg-primary header">
-  <a class="navbar-brand" href="#">Imventory Management</a>
-</nav>
+<header>
+  <div class="container-fluid">
+    <div class="container">
+      <a href="#" class="navbar-brand d-flex align-itemscenter">
+        <strong class="title">Cavea</strong>
+      </a>
+    </div>
+  </div>
+</header>
