--- a/src/app/content/add/add.component.html
+++ b/src/app/content/add/add.component.html
@@ -1,39 +1,49 @@
-<div>
-  <form class="form" [formGroup]="form">
-    <h2 class="title">დაამატეთ ნივთი</h2>
-    <div class="col-auto">
-      <label for="status" class="col-sm-2 col-form-label"
-        >ადგილმდებარეობა:</label
+<main class="body">
+  <div>
+    <form class="form" [formGroup]="form">
+      <h2 class="title">დაამატეთ ნივთი</h2>
+      <div class="col-auto">
+        <label for="status" class="col-sm-2 col-form-label label"
+          >ადგილმდებარეობა:</label
+        >
+        <select name="form-select" class="form-select" formControlName="Adress">
+          <option [value]="adress.Main">მთავარი ოფისი</option>
+          <option [value]="adress.Gallery">კავეა გალერია</option>
+          <option [value]="adress.Mall">კავეა თბილისი მოლი</option>
+          <option [value]="adress.EastPoint">კავეა ისთ ფოინთი</option>
+          <option [value]="adress.CityMall">კავეა სითი მოლი</option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label for="status" class="col-sm-2 col-form-label label"
+          >ნივთის დასახელება:</label
+        >
+        <input
+          class="form-control"
+          type="text"
+          placeholder=""
+          formControlName="name"
+        />
+      </div>
+      <label for="status" class="col-sm-2 col-form-label label"
+        >ფასი(ლარებში):</label
       >
-      <select name="form-select" class="form-select" formControlName="Adress">
-        <option [value]="adress.Main">მთავარი ოფისი</option>
-        <option [value]="adress.Gallery">კავეა გალერია</option>
-        <option [value]="adress.Mall">კავეა თბილისი მოლი</option>
-        <option [value]="adress.EastPoint">კავეა ისთ ფოინთი</option>
-        <option [value]="adress.CityMall">კავეა სითი მოლი</option>
-      </select>
-    </div>
-    <div class="form-group">
-      <label for="status" class="col-sm-2 col-form-label"
-        >ნივთის დასახელება:</label
+      <div>
+        <input
+          type="number"
+          formControlName="number"
+          id="number"
+          [formGroup]="form"
+          novalidate
+        />
+      </div>
+      <button
+        type="submit"
+        class="btn btn-outline-info button1"
+        (click)="submit(form.value)"
       >
-      <input
-        class="form-control"
-        type="text"
-        placeholder=""
-        formControlName="name"
-      />
-    </div>
-    <label for="status" class="col-sm-2 col-form-label">ფასი(ლარებში):</label>
-    <div>
-      <input
-        type="number"
-        formControlName="number"
-        id="number"
-        [formGroup]="form"
-        novalidate
-      />
-    </div>
-    <button type="submit" class="btn btn-primary button1" (click)="submit(form.value)">დამატება</button>
-  </form>
-</div>
+        დამატება
+      </button>
+    </form>
+  </div>
+</main>
