--- a/src/app/content/list/list.component.css
+++ b/src/app/content/list/list.component.css
@@ -1,10 +1,21 @@
 .button1 {
-  margin-top: 20px;
-  background-color: #cc3399 !important;
-  border-color: #cc3399 !important;
-  margin-left: 20px;
+  margin: 100px 0 20px 20px;
+}
+.button2 {
+  margin: 20px 0 0 20px;
 }
 .thead-light {
-  background-color: #385170 !important;
+  background-color: none !important;
   color: white !important;
+}
+.body {
+  background-image: linear-gradient(
+    to right top,
+    #051937,
+    #004d7a,
+    #008793,
+    #00bf72,
+    #a8eb12
+  );
+  height: 100vh;
 }
