--- a/src/app/content/list/list.component.html
+++ b/src/app/content/list/list.component.html
@@ -1,34 +1,44 @@
-<button type="button" class="btn btn-primary button1" [routerLink]="['/add']">
-  დამატება
-</button>
-<table class="table">
-  <thead class="thead-light">
-    <tr>
-      <th scope="col">ნივთის სახელი</th>
-      <th scope="col">ნივთის ადგილმდებარეობა</th>
-      <th scope="col">ფასი (ლარებში)</th>
-      <th scope="col">ოპერაციები</th>
-    </tr>
-  </thead>
-  <tbody *ngFor="let inventory of inventoryList">
-    <ng-container>
+<main class="body">
+  <button
+    type="button"
+    class="btn btn-outline-info button1"
+    [routerLink]="['/add']"
+  >
+    დამატება
+  </button>
+  <table class="table">
+    <thead class="thead-light">
       <tr>
-        <th>{{ inventory.name }}</th>
-        <td>{{ inventory.Adress }}</td>
-        <td>{{ inventory.number }}</td>
-        <td>
-          <button
-            type="button"
-            class="btn btn-outline-danger"
-            (click)="deleteInventory(inventory)"
-          >
-            Danger
-          </button>
-        </td>
+        <th scope="col">ნივთის სახელი</th>
+        <th scope="col">ნივთის ადგილმდებარეობა</th>
+        <th scope="col">ფასი (ლარებში)</th>
+        <th scope="col">ოპერაციები</th>
       </tr>
-    </ng-container>
-  </tbody>
-</table>
-<button type="button" class="btn btn-primary button2" [routerLink]="['/add']">
-  დამატება
-</button>
+    </thead>
+    <tbody *ngFor="let inventory of inventoryList">
+      <ng-container>
+        <tr>
+          <th>{{ inventory.name }}</th>
+          <td>{{ inventory.Adress }}</td>
+          <td>{{ inventory.number }}</td>
+          <td>
+            <button
+              type="button"
+              class="btn btn-outline-danger"
+              (click)="deleteInventory(inventory)"
+            >
+              Danger
+            </button>
+          </td>
+        </tr>
+      </ng-container>
+    </tbody>
+  </table>
+  <button
+    type="button"
+    class="btn btn-outline-info button2"
+    [routerLink]="['/add']"
+  >
+    დამატება
+  </button>
+</main>
