--- a/src/app/shell/header/header.component.css
+++ b/src/app/shell/header/header.component.css
@@ -1,6 +1,38 @@
-.header {
-  background-color: #cc3399 !important;
+.title {
+  padding-top: 20px;
+  font-size: larger;
+  font-weight: 500;
+  color: white;
 }
-.navbar-brand {
-  margin-left: 20px;
+.container {
+  display: flex;
+  align-items: flex-end;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.button1 {
+  margin-right: 10px;
+}
+.en {
+  color: #dc3545;
+}
+.ka {
+  color: #dc3545;
+}
+.inactive {
+  filter: grayscale(100%);
+}
+.icon {
+  margin-right: 10px;
+}
+header {
+  position: fixed;
+  width: 100%;
+  height: 80px;
+  border: 1px solid white;
+  background-color: none;
+}
+.signIn {
+  width: 100%;
 }
