--- a/src/app/content/list/list.component.html
+++ b/src/app/content/list/list.component.html
@@ -27,7 +27,7 @@
               class="btn btn-outline-danger"
               (click)="deleteInventory(inventory)"
             >
-              Danger
+              წაშლა
             </button>
           </td>
         </tr>
